syntax = "proto3";
package resist.usergroups.v1;

option go_package = "resist/x/usergroups/types";

// GovernanceProposal defines the GovernanceProposal message.
message GovernanceProposal {
  string index = 1;
  string title = 2;
  string description = 3;
  string proposer = 4;
  string proposal_type = 5;
  int64 voting_period_start = 6;
  int64 voting_period_end = 7;
  uint64 yes_votes = 8;
  uint64 no_votes = 9;
  uint64 abstain_votes = 10;
  string status = 11;
  string creator = 12;
}
